kubernetes-template/deployment.yaml
apiVersion: extensions/v1beta1
kind: Deployment
metadata:
  name: simple-deployment
spec:
  replicas: 3
  revisionHistoryLimit: 3 # 保留历史版本
  paused: false           # 暂停部署，默认是false
  progressDeadlineSeconds: 600 # 部署超时时间（s），默认是600
  strategy:
    rollingUpdate:
      maxSurge: 20%
      maxUnavailable: 30%
    type: "RollingUpdate"


  # 基于等值的标签要求的一种使用场景是 Pod 要指定节点选择标准。 例如，下面的示例 Pod 选择带有标签 "accelerator=nvidia-tesla-p100"。
  nodeSelector: 
    accelerator: nvidia-tesla-p100
  selector:
    matchExpressions:
      - key: env
        operator: Exists
      - {key: app, operator: In, values: [nginx-pod]}
    matchLables:
      app: nginx
  # new container template 当副本数量不足时使用该模板扩展
  template:
    metadata:
      name: nginx-app
      labels:
        editor: vscode
    spec:
      containers:
      - name: name
        image: Enter containers image
        resources: 
          limits: 
            cpu: "200m"
            memory: "500Mi"
  
      volumes:
        - name:  name of the volume
          mountPath: /tmp/lib/netcore
