kubernetes-template/pod-command.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  namespace: dev
  labels:
    name: myapp
    version: '2.0.0'
spec:
  containers:
  - name: myapp
    image: busybox:latest
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"
    command: ["/bin/sh","-c","touch /tmp/hello.txt;while true;do /bin/echo $(date +%T) >> /tmp/hello.txt; sleep 3; done;"]
