kubernetes-template/pod-deployment.yaml
apiVersion: v1
kind: Pod
metadata:
  name: myapp
  labels:
    name: myapp
spec:
  containers:
  - name: myapp
    image: <Image>
    resources:
      limits:
        memory: "128Mi"
        cpu: "500m"  #1000m = 1core
    ports:
      - containerPort: 80

    lifecycle: 
      postStart: 
        exec:
        
        httpGet:

        tcpSocket:
      

      preStop: 

    livenessProbe:
      exec:
        command:
          - /bin/my-script.sh
      initialDelaySeconds: 60
      timeoutSeconds: 10
      periodSeconds: 50  #in seconds
      httpGet:
        host: "127.0.0.1"
        port: 8080
        path: /healthz

    readinessProbe:
      failureThreshold: 5  # 5 attempts indicate failure
  restartPolicy: Never   
  volumes:
    - name:  netcore-mount
      hostPath:
        path:  /tmp/lib/netcore
