kubernetes-template/pod-initial-container.yaml
apiVersion: v1
kind: Pod
metadata:
  name: pod-initcontainer
  namespace: dev
spec:
  containers:
  - name: main-container
    resources:
    image: nginx:1.17.1
    ports: 
    - name: nginx-port
      containerPort: 80
